# Space-Trade-Fx

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .replit  SETUP.md  pyproject.toml  pytest.ini  replit.md  setup.cfg  setup_project.sh
.github/workflows/: lint.yml  test.yml
SpaceTradingFX/: README.md  SETUP.md  requirements.txt
SpaceTradingFX/data/: signals.txt
SpaceTradingFX/flask_dashboard/: admin.py  app.py  auth.py  db_migrate.py  forex_data.py  license_manager.py  manage_admin.py  models.py  payments.py  replit_auth.py  routes.py  trading_engine.py
SpaceTradingFX/flask_dashboard/templates/: admin.html  base.html  buy_license.html  dashboard.html  error.html  landing.html  licenses.html  login.html  preferences.html
SpaceTradingFX/space_trading_fx/: main.py
SpaceTradingFX/space_trading_fx/config/: __init__.py  settings.py
SpaceTradingFX/space_trading_fx/core/: signal_reader.py  strategy_engine.py
SpaceTradingFX/space_trading_fx/trading/: __init__.py  trade_executor.py
SpaceTradingFX/space_trading_fx/utils/: __init__.py  logger.py  logger_file.py  status.py
SpaceTradingFX/tests/: __init__.py  test_preferences_flow.py  test_strategy_engine.py
