[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "pysimplegui>=5.0.8.3",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "schedule>=1.2.2",
]
