[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "flask>=3.1.2",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "pyjwt>=2.10.1",
    "pysimplegui>=5.0.8.3",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rsa>=4.9.1",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.44",
    "stripe>=13.1.1",
]
